[package]
name = "day_11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
array2d = "0.3.0"
itertools = "0.12.0"

[[bin]]
name="part_1"
path="./src/part_1.rs"

[[bin]]
name="part_2"
path="./src/part_2.rs"


[[bin]]
name="part_2_test"
path="./src/part_2_test.rs"

